[gd_scene load_steps=19 format=3 uid="uid://bgjafvglpobht"]

[ext_resource type="Script" path="res://main.gd" id="1_t0vsi"]
[ext_resource type="Script" path="res://Snake/snake_base/SnakePathManager.gd" id="4_rok1f"]
[ext_resource type="PackedScene" uid="uid://bbvdf5j6jv5lt" path="res://Snake/BasicHead.tscn" id="5_dk6tp"]
[ext_resource type="Script" path="res://CommonComponents/OffScreenPointer.gd" id="6_5bgtq"]
[ext_resource type="Script" path="res://Snake/snake_base/SnakeTail.gd" id="6_8q7ym"]
[ext_resource type="Script" path="res://uiComponents/oldUI/LengthScore.gd" id="7_1o55u"]
[ext_resource type="PackedScene" uid="uid://cf23g13k3shi0" path="res://uiComponents/game_over_ui.tscn" id="8_2bwvs"]
[ext_resource type="Script" path="res://uiComponents/oldUI/LongestScore.gd" id="8_thf5p"]
[ext_resource type="PackedScene" uid="uid://dc4e3mvd7rgmk" path="res://uiComponents/game_play_ui.tscn" id="9_b3mft"]
[ext_resource type="PackedScene" uid="uid://b2umnuxqfr5xr" path="res://uiComponents/start_menu.tscn" id="10_72f47"]
[ext_resource type="Script" path="res://CommonComponents/StateMachine/base_nodes/state_machine.gd" id="11_8vjms"]
[ext_resource type="Script" path="res://GameStates/StartScreenBehaviour.gd" id="12_jlpkp"]
[ext_resource type="Script" path="res://CommonComponents/StateMachine/transition_nodes/state_transition_signal.gd" id="13_5wm74"]
[ext_resource type="Script" path="res://StartGame.gd" id="14_oqqsf"]
[ext_resource type="Script" path="res://GameStates/PlayBehaviour.gd" id="14_qjior"]
[ext_resource type="Script" path="res://GameStates/GameOverScreenBehaviour.gd" id="15_v5odv"]
[ext_resource type="Script" path="res://CommonComponents/StateMachine/transition_nodes/state_transition_instant.gd" id="15_v8pnl"]

[sub_resource type="Curve2D" id="Curve2D_prrte"]

[node name="main" type="Node2D"]
script = ExtResource("1_t0vsi")

[node name="newApple" type="Timer" parent="."]
wait_time = 0.768
autostart = true

[node name="Snake2" type="Node2D" parent="."]
position = Vector2(645, 201)
script = ExtResource("4_rok1f")

[node name="HeadSegment" parent="Snake2" instance=ExtResource("5_dk6tp")]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Snake2/HeadSegment"]

[node name="Tail" type="Path2D" parent="Snake2"]
curve = SubResource("Curve2D_prrte")
script = ExtResource("6_8q7ym")

[node name="OffScreenPointer" type="Polygon2D" parent="." node_paths=PackedStringArray("node")]
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(15, -40, 0, 0, -15, -40, 0, -30)
script = ExtResource("6_5bgtq")
node = NodePath("../Snake2/HeadSegment/VisibleOnScreenNotifier2D")

[node name="GUI" type="HBoxContainer" parent="."]
visible = false
offset_left = 25.0
offset_top = 33.0
offset_right = 273.0
offset_bottom = 83.0

[node name="labels" type="VBoxContainer" parent="GUI"]
layout_mode = 2

[node name="LengthLable" type="Label" parent="GUI/labels"]
layout_mode = 2
text = "Max Length: "

[node name="LongestLabel" type="Label" parent="GUI/labels"]
layout_mode = 2
text = "Current Length:"

[node name="scores" type="VBoxContainer" parent="GUI"]
layout_mode = 2

[node name="LengthScore" type="Label" parent="GUI/scores"]
layout_mode = 2
text = "0"
script = ExtResource("7_1o55u")

[node name="LongestScore" type="Label" parent="GUI/scores"]
layout_mode = 2
text = "0"
script = ExtResource("8_thf5p")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StartMenu" parent="CanvasLayer" instance=ExtResource("10_72f47")]
visible = false
anchors_preset = 15

[node name="GamePlayUi" parent="CanvasLayer" instance=ExtResource("9_b3mft")]
visible = false

[node name="GameOverUi" parent="CanvasLayer" instance=ExtResource("8_2bwvs")]
visible = false

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("11_8vjms")
initial_state = NodePath("BeforeGame")

[node name="BeforeGame" type="Node" parent="StateMachine"]
script = ExtResource("12_jlpkp")

[node name="SignalTo_StartGame" type="Node" parent="StateMachine/BeforeGame" node_paths=PackedStringArray("to_state")]
script = ExtResource("13_5wm74")
to_state = NodePath("../../StartGame")

[node name="StartGame" type="Node" parent="StateMachine"]
script = ExtResource("14_oqqsf")

[node name="InstantTo_DuringGame" type="Node" parent="StateMachine/StartGame" node_paths=PackedStringArray("to_state")]
script = ExtResource("15_v8pnl")
to_state = NodePath("../../DurringGame")

[node name="DurringGame" type="Node" parent="StateMachine"]
script = ExtResource("14_qjior")

[node name="SignalTo_EndGame" type="Node" parent="StateMachine/DurringGame" node_paths=PackedStringArray("to_state")]
script = ExtResource("13_5wm74")
to_state = NodePath("../../EndGame")

[node name="EndGame" type="Node" parent="StateMachine"]
script = ExtResource("15_v5odv")

[node name="SignalTo_StartGame" type="Node" parent="StateMachine/EndGame" node_paths=PackedStringArray("to_state")]
script = ExtResource("13_5wm74")
to_state = NodePath("../../StartGame")

[node name="SignalTo_MainMenu" type="Node" parent="StateMachine/EndGame" node_paths=PackedStringArray("to_state")]
script = ExtResource("13_5wm74")
to_state = NodePath("../../BeforeGame")

[connection signal="timeout" from="newApple" to="." method="_on_new_apple_timeout"]
[connection signal="died" from="Snake2/HeadSegment" to="StateMachine/DurringGame/SignalTo_EndGame" method="_on_signal"]
[connection signal="feed" from="Snake2/HeadSegment" to="Snake2" method="_on_head_segment_feed"]
[connection signal="length_changed" from="Snake2/Tail" to="GUI/scores/LengthScore" method="_on_tail_length_changed"]
[connection signal="length_changed" from="Snake2/Tail" to="GUI/scores/LongestScore" method="_on_tail_length_changed"]
[connection signal="start_game_select" from="CanvasLayer/StartMenu" to="StateMachine/BeforeGame/SignalTo_StartGame" method="_on_signal"]
[connection signal="select_main_menu" from="CanvasLayer/GameOverUi" to="StateMachine/EndGame/SignalTo_MainMenu" method="_on_signal"]
[connection signal="select_play_again" from="CanvasLayer/GameOverUi" to="StateMachine/EndGame/SignalTo_StartGame" method="_on_signal"]
[connection signal="reset_snake" from="StateMachine/StartGame" to="Snake2" method="_on_start_game_reset_snake"]
